# Sirelphy

./: .gitignore  .gitmodules  CMakeLists.txt  Force ideas.docx  Sirelphy.sln  Sirelphy.sln_old  Sirelphy.vcxproj  Sirelphy.vcxproj.filters  SirelphyTest.vcxproj_old  Universe properties.pptx  sirephys_features.docx
source/: precomp.cpp  precomp.h  sirelphy.cpp
source/core/: CMakeLists.txt  Sirelphy.vcxproj  Sirelphy.vcxproj.filters  precomp.cpp  precomp.h  sirelphy.cpp  sirelphy.h
source/core/interface/: object_interface.cpp  universe_interface.cpp  universe_interface.h
source/core/physics/: relativity.h
source/core/physics/forces/: forces.cpp  forces.h  gravity.cpp  gravity.h  property.cpp  property.h
source/core/physics/helpers/: bounding.cpp  bounding.h  ntree.decl.h  ntree.h  octree.h  test_ntree.cpp
source/core/physics/objects/: atom.h  frame.cpp  frame.h  object.cpp  object.h  object_compound.cpp  object_compound.h  origin.h  particle.cpp  particle.h  particleclass.cpp  particleclass.h
source/core/physics/universe/: generators.h  scenemanager.h  universe.cpp  universe.h
source/core/physics/universe/generators/: funny_photon_system.cpp  standard_atomic.cpp
source/core/physics/vector/: vector.decl.h  vector.h
source/core/physics/vector/special/: vector_length.h  vector_lengthtime.h  vector_unit3d.h  vector_velocity.h
source/core/unitlib/: constants.h  units.cpp  units.h
source/core/unitlib/helpers/: constants_private.h  dimension_fundamentals.h  dimension_templates.h  helper_macros.h  si_prefixes.h
source/core/unitlib/units/: acceleration.h  amount.h  angle.h  area.h  base.cpp  base.h  charge.h  concentration.h  cycle.h  dimensionless.h  energy.cpp  energy.h  frequency.h  helper_macros.h  length.h  mass.cpp  mass.h  pressure.h  temperature.h  time.h  velocity.cpp  velocity.h  volume.h
source/core/unitlib/units/base/: baseunit.h  dimension_fundamentals.h  dimension_templates.h
source/interface/: object_interface.cpp  universe_interface.cpp  universe_interface.h
source/physics/: phystodo.txt  relativity.h
source/physics/composites/: bounding.h
source/physics/forces/: forces.cpp  forces.h  gravity.cpp  gravity.h  property.cpp  property.h
source/physics/helpers/: bounding.cpp  bounding.h  ntree.decl.h  ntree.h  octree.cpp  octree.h
source/physics/objects/: blop.h  frame.cpp  frame.h  object.cpp  object.h  object_compound.cpp  object_compound.h  origin.h  particle.cpp  particle.h  particleclass.cpp  particleclass.h
source/physics/universe/: universe.cpp  universe.h
source/physics/utilities/: boundingbox.h
source/physics/vector/: vector.h  vector_2d.cpp  vector_2d.h  vector_3d.cpp  vector_3d.h  vector_4d.cpp  vector_4d.h  vector_nd.cpp  vector_nd.decl.h  vector_nd.h
source/physics/vector/special/: vector_length.h  vector_lengthtime.h  vector_unit3d.h  vector_velocity.h
source/test/: CMakeLists.txt  SirelphyTest.vcxproj  test.cpp  vector.cpp
source/test/x64/Release/: SirelphyTest.exe.recipe  SirelphyTest.vcxproj.FileListAbsolute.txt
source/test/x64/Release/SirelphyTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  SirelphyTest.lastbuildstate  SirelphyTest.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
source/unitlib/: constants.h  si_prefixes.h  unitlib.h
source/unitlib/units/: angle.h  dimensionless.h  energy.cpp  energy.h  helper_macros.h  length.h  mass.cpp  mass.h  temperature.h  time.h  velocity.cpp  velocity.h
source/unitlib/units/base/: baseunit.h  dimension_fundamentals.h  dimension_templates.h
source/utils/: exceptions.cpp  exceptions.h  randomnumbers.cpp  randomnumbers.h
